scripts/k8s/stayorgo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stayorgo-pod
  labels:
    app: stayorgo
spec:
  containers:
    - name: stayorgo
      image: stayorgo:0.2
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
      resources:
        requests:
          memory: "64M"
          cpu: "250m"
        limits:
          memory: "64M"
          cpu: "250m"
  restartPolicy: OnFailure
