scripts/k8s/stayorgo-service-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stayorgo
  labels:
    app: stayorgo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stayorgo
  template:
    metadata:
      name: stayorgo
      labels:
        app: stayorgo
    spec:
      containers:
        - name: stayorgo
          image: stayorgo:0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64M"
              cpu: "250m"
            limits:
              memory: "64M"
              cpu: "250m"
          readinessProbe:
            httpGet:
              port: 8080
              path: /hello
            initialDelaySeconds: 1
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              port: 8080
              path: /hello
            initialDelaySeconds: 5
            periodSeconds: 20
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: stayorgo-service
  labels:
    app: stayorgo
spec:
  type: ClusterIP #cluster port expose for localhost routing
  ports:
    - port: 8080  # The port the service is exposed on
      targetPort: 8080  # The target port on the pods, adjust as necessary
      protocol: TCP
      name: http
  selector:
    app: stayorgo  # Must match labels of the pods you want to target

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stayorgo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: stayorgo.k8s.orb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stayorgo-service
                port:
                  name: http
